--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.0",
     "nodemon": "^2.0.7",
-    "pm2": "^4.5.6"
+    "pm2": "^4.5.6",
+    "sequelize": "^6.6.5"
   }
 }
