--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "set DEBUG=app:* & nodemon app/app.js",
+    "start": "set NODE_ENV=production & node app/app.js"
   },
   "author": "",
   "license": "ISC",
