--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "set DEBUG=app:* & nodemon app/app.js",
+    "start": "set NODE_ENV=production & node app/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "latest": "^0.2.0",
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.0.5",
     "nodemon": "^2.0.7",
-    "pm2": "^4.5.6"
+    "pm2": "^4.5.6",
+    "util": "^0.12.4"
   }
 }
